# -*- mode: bazel; -*-
# vi: set ft=bazel:

#
# src/BUILD.bazel
# RVO2-3D Library
#
# SPDX-FileCopyrightText: 2008 University of North Carolina at Chapel Hill
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# Please send all bug reports to <geom@cs.unc.edu>.
#
# The authors may be contacted via:
#
# Jur van den Berg, Stephen J. Guy, Jamie Snape, Ming C. Lin, Dinesh Manocha
# Dept. of Computer Science
# 201 S. Columbia St.
# Frederick P. Brooks, Jr. Computer Science Bldg.
# Chapel Hill, N.C. 27599-3175
# United States of America
#
# <https://gamma.cs.unc.edu/RVO2/>
#

load("@rules_cc//cc:defs.bzl", "cc_library")
load("@rules_pkg//pkg:mappings.bzl", "pkg_attributes", "pkg_files")

package(default_package_metadata = [
    "//:license",
    "//:package_info",
])

# REUSE-IgnoreStart
genrule(
    name = "export",
    outs = ["Export.h"],
    cmd = """
cat << 'EOF' > $@
/*
 * Export.h
 * RVO2-3D Library
 *
 * SPDX-FileCopyrightText: 2008 University of North Carolina at Chapel Hill
 * SPDX-License-Identifier: Apache-2.0
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *
 * Please send all bug reports to <geom@cs.unc.edu>.
 *
 * The authors may be contacted via:
 *
 * Jur van den Berg, Stephen J. Guy, Jamie Snape, Ming C. Lin, Dinesh Manocha
 * Dept. of Computer Science
 * 201 S. Columbia St.
 * Frederick P. Brooks, Jr. Computer Science Bldg.
 * Chapel Hill, N.C. 27599-3175
 * United States of America
 *
 * <https://gamma.cs.unc.edu/RVO2/>
 */

#ifndef RVO3D_EXPORT_H_
#define RVO3D_EXPORT_H_

#ifdef RVO3D_STATIC_DEFINE
#define RVO3D_EXPORT
#else
#ifdef _WIN32
#ifdef RVO3D_EXPORTS
#define RVO3D_EXPORT __declspec(dllexport)
#else
#define RVO3D_EXPORT __declspec(dllimport)
#endif
#else
#define RVO3D_EXPORT __attribute__((visibility("default")))
#endif
#endif

#endif /* RVO3D_EXPORT_H_ */
EOF
""",
)
# REUSE-IgnoreEnd

filegroup(
    name = "hdrs",
    srcs = [
        "Export.h",
        "Plane.h",
        "RVO.h",
        "RVOSimulator.h",
        "Vector3.h",
    ],
)

cc_library(
    name = "RVO3D",
    srcs = [
        "Agent.cc",
        "Agent.h",
        "Export.cc",
        "KdTree.cc",
        "KdTree.h",
        "Plane.cc",
        "RVOSimulator.cc",
        "Vector3.cc",
    ],
    hdrs = [":hdrs"],
    copts = [
        "-fvisibility-inlines-hidden",
        "-fvisibility=hidden",
    ],
    includes = ["."],
    visibility = ["//visibility:public"],
)

pkg_files(
    name = "include",
    srcs = [":hdrs"],
    attributes = pkg_attributes(mode = "0644"),
    prefix = "usr/include/RVO3D",
    visibility = ["//:__pkg__"],
)
